Update exported README

--- a/static/README.htm
+++ b/static/README.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>README.md</title><script type="text/javascript">
 //<![CDATA[
-window.__cfRocketOptions = {byc:0,p:0,petok:"1aa26ec79d9302ccdb55a878288d79013e9e7ae3-1511458857-1800"};
+window.__cfRocketOptions = {byc:0,p:0,petok:"fe75576cfe35c5406ceb82b5808b9ec69af66cc4-1511459663-1800"};
 //]]>
 </script>
 <script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/0e574bed/cloudflare-static/rocket.min.js"></script>
@@ -35,7 +35,7 @@ window.__cfRocketOptions = {byc:0,p:0,petok:"1aa26ec79d9302ccdb55a878288d79013e9
 <p>Performing moves through mouse clicks or mouse dragging of the figures. Most alternatives offer one way or the other, some of them let the user choose operating mode, and … oh! there is also <a href="https://www.chessclub.com/">ICC</a> web interface special case that not only uses dragging, but also pops up an annoying JQuery UI dialog <strong>in the middle of your blitz game!</strong> if you accidentally click twice on the board. All of this is solved by Next Chess Board. The user can click and/or drag and the component will behave consequently.</p>
 </li>
 <li>
-<p>Seven chess figures set to choose from .</p>
+<p>Seven chess figures sets to choose from .</p>
 </li>
 <li>
 <p>Four differnet board backgrounds.</p>
