Update README docs

--- a/static/README.htm
+++ b/static/README.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"><title>README.md</title><script type="text/javascript">
 //<![CDATA[
-window.__cfRocketOptions = {byc:0,p:0,petok:"fe75576cfe35c5406ceb82b5808b9ec69af66cc4-1511459663-1800"};
+window.__cfRocketOptions = {byc:0,p:0,petok:"51e766508a2cb83f45ac53a8977f81f66f0867e5-1511462528-1800"};
 //]]>
 </script>
 <script type="text/javascript" src="https://ajax.cloudflare.com/cdn-cgi/scripts/0e574bed/cloudflare-static/rocket.min.js"></script>
@@ -58,7 +58,7 @@ window.__cfRocketOptions = {byc:0,p:0,petok:"fe75576cfe35c5406ceb82b5808b9ec69af
 </ol>
 <hr>
 <h2><a id="API_56"></a>API</h2>
-<p>Main recomendation here is the old, wise <em>Look at the source, Luke</em></p>
+<p>Main recomendation here is the old, wise <em>Use the source, Luke</em></p>
 <p>The client pages, users of the component, may be found in the <code>/pages</code> directory of the source. There almost every feature this component provides is used, and the code is pretty self explanatory. Looking at them (and reusing code!) is strongly recommended.</p>
 <p>Anyway the formal description follows.</p>
 <h4><a id="Static_properties_and_methods_64"></a>Static properties and methods</h4>
